# Task_GKU_Sar

./: README.md  pyproject.toml  script.py
app/: .env.example  consts.py  core.py  writers.py
forecasts/: weather-forecast.xlsx
